fix: padding size on small screen

--- a/src/containers/ResponseDisplay/ResponseDisplay.scss
+++ b/src/containers/ResponseDisplay/ResponseDisplay.scss
@@ -48,5 +48,9 @@
 @include media-breakpoint-down(sm) {
   .response-display {
     width: 100%;
+
+    .preview-display {
+      padding: map-get($spacers, 1) 0;
+    }
   }
 }
